Content 2 Update 	-Got boxes and heading in the right spot 	-Cannot align the text correctly 	-Changes quote background and text

--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,43 @@ button {
     justify-content: center;
     width: 500px;
 }
+
+.content2 { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.picture-text-boxes {
+    display: flex;
+    gap: 80px;
+    justify-content: space-around;
+}
+
+.imgs {
+    border: blue 3px solid;
+    width: 150px;
+    border-radius: 10px;
+    height: 150px;
+
+}
+
+.picture-text {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    width: 150px;
+    justify-content: center;
+    gap: 80px;
+    height: 150px;
+}
+
+.content3 {
+    background-color: #E5E7EB;
+}
+
+#quote {
+    font-size: 32px;
+    font-style: italic;
+    color: #1F2937;
+}
